--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/require.js"></script>
+    <script type="text/javascript" src="js/postmonger.js"></script>
     <script type="text/javascript">
       (function () {
         var config = {
-          baseUrl: "js",
+          baseUrl: "",
         };
 
         var dependencies = ["customActivity"];
